Foi efetuada uma melhoria no código segundo o plugin SonarLint